--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
-title: Your Name's Progress Journal
+theme: jekyll-theme-merlot
+title: Enes Furkan Pekalkan's Progress Journal
 description: This journal is created for IE 360 Spring24.
